// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth search form Form should render correctly with a user 1`] = `
<div
  className="sc-iCoHVE jPPvpm"
>
  <div
    className="sc-fujyUd juGuta"
  >
    <form
      onSubmit={[Function]}
    >
      <label
        className="sc-bdnylx YDaVd"
        htmlFor="user"
      >
        <span
          className="sc-gtssRu hqOiqN"
        >
          Username or email address
        </span>
        <input
          className="sc-eCApGN gNiOsV"
          defaultValue="someuser"
          id="user"
          name="user"
          onChange={[Function]}
          type="text"
        />
      </label>
      <button
        className="sc-jSFkmK bVOnRo"
        disabled={false}
        id="search-button"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
</div>
`;

exports[`Auth search form Form should render correctly with no user 1`] = `
<div
  className="sc-iCoHVE jPPvpm"
>
  <div
    className="sc-fujyUd juGuta"
  >
    <form
      onSubmit={[Function]}
    >
      <label
        className="sc-bdnylx YDaVd"
        htmlFor="user"
      >
        <span
          className="sc-gtssRu hqOiqN"
        >
          Username or email address
        </span>
        <input
          className="sc-eCApGN gNiOsV"
          defaultValue=""
          id="user"
          name="user"
          onChange={[Function]}
          type="text"
        />
      </label>
      <button
        className="sc-jSFkmK bVOnRo"
        disabled={false}
        id="search-button"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
</div>
`;
